fix pading, margin, gap

--- a/src/typography.css
+++ b/src/typography.css
@@ -11,19 +11,13 @@ body {
 }
 
 .title {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
   line-height: 18px;
 }
 
 .text-md {
   font-weight: 500;
-  font-size: 15px;
-  line-height: 18px;
-}
-
-.text-rg {
-  font-weight: 400;
   font-size: 15px;
   line-height: 18px;
 }
@@ -53,8 +47,8 @@ div,
 input,
 .text-rg {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 15px;
+  line-height: 18px;
 }
 
 .caption-color {
